--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,6 +35,7 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./htmlcov
         publish_branch: gh-pages
+        force_orphan: true
     
     - name: Display deployment URL
       run: |
